# proc-macro-workshop

./: Cargo.toml  README.md  main.rs
bitfield/: Cargo.toml
bitfield/impl/: Cargo.toml
bitfield/impl/src/: lib.rs
bitfield/src/: lib.rs
bitfield/tests/: 03-accessors.rs  04-multiple-of-8bits.stderr  08-non-power-of-two.stderr  11-bits-attribute-wrong.stderr  progress.rs
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: 07-repeated-field.rs  09-redefined-prelude-types.rs
debug/: Cargo.toml
debug/src/: lib.rs
debug/tests/: 07-associated-type.rs
default/: Cargo.toml
default/src/: lib.rs
default/tests/: 01-unit.rs  02-unnamed.rs  03-named.rs  04-generics.rs  05-struct.rs  05-struct.stderr  06-empty.rs  06-empty.stderr  07-more-than-one.rs  07-more-than-one.stderr  progress.rs
prompt/: Cargo.toml
prompt/impl/: Cargo.toml
prompt/impl/src/: lib.rs
prompt/src/: lib.rs
prompt/tests/: 01-named-structs.rs  01-struct-named.rs  02-struct-unnamed.rs  03-enums-newtype.rs  03-struct-unit.rs  04-enums-unnamed.rs  05-enum-unnamed.rs  05-enums-named.rs  07-enum-unit.rs  08-enum-empty.rs  08-enum-empty.stderr  09-trait-not-sat.rs  09-trait-not-sat.stderr  10-from-str.rs  11-attr-help.rs  progress.rs
seq/: Cargo.toml
seq/src/: lib.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
sorted/tests/: 09-underscore.rs  09-underscore.stderr  progress.rs
